# kirisu2

./: .gitignore  README.md  index.html  kirisu2.ipynb  kirisu2_env.yaml  kirisu2_streamlit.py  pyproject.toml  requirements.txt  tdspectrum.py  ui.py
.streamlit/: config.toml
